force-app/main/default/objects/ccrz__E_PriceGroupItem__c/ccrz__E_PriceGroupItem__c.object-meta.xml
<CustomObject>
    <description>Holds the items making up a price grouping.  These indicate the items that are part of the grouping, as well as a ny other controlling attributes, such as quantity range or control.</description>
    <label>CC Price Group Item</label>
    <nameField>
        <displayFormat>PGI-{0000000000}</displayFormat>
        <label>CC Price Group Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Price Group Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>