force-app/main/default/objects/ccrz__E_PriceGroupItem__c/fields/ccrz__Enabled__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines if the entry is available.</description>
    <inlineHelpText>Determines if the entry is available.</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>