force-app/main/default/objects/ccrz__E_PriceGroupItem__c/fields/ccrz__PriceGroup__c.field-meta.xml
<CustomField>
    <fullName>ccrz__PriceGroup__c</fullName>
    <label>CC Price Group</label>
    <referenceTo>ccrz__E_PriceGroup__c</referenceTo>
    <relationshipLabel>CC Price Group Items</relationshipLabel>
    <relationshipName>PriceGroupItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>