force-app/main/default/objects/ccrz__E_PriceGroupItem__c/fields/ccrz__Product__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product represented by this item.</description>
    <inlineHelpText>Product represented by this item.</inlineHelpText>
    <label>Product</label>
    <referenceTo>ccrz__E_Product__c</referenceTo>
    <relationshipLabel>CC Price Group Items</relationshipLabel>
    <relationshipName>PriceGroupItems</relationshipName>
    <type>Lookup</type>
</CustomField>