force-app/main/default/objects/ccrz__E_PriceGroupItem__c/fields/ccrz__Quantity__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Quantity__c</fullName>
    <description>Quantity for this item.  This can represent a max value supported by this item, or a minimum value supported depending on the corresponding implementation.</description>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>